Fix wrong paddings

--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -2,7 +2,6 @@
 
 /* MULTI SELECTION */
 .input-checkbox{
-	padding: 3px 10px;
 	display: inline-flex;
 }
 .input-checkbox__input{
